--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "script-loader",
-	"version": "0.5.2",
+	"version": "0.5.2-dev",
 	"author": "Tobias Koppers @sokra",
 	"description": "script loader module for webpack",
 	"dependencies": {
